# texture2ddecoder

./: .gitattributes.txt  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  publish_py.yml
bindings/python/: COPYRIGHT  Cargo.toml  README.md  pyproject.toml  texture2ddecoder_rs.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test.py  test_main.py
resources/tests/: .gitignore  README.md
resources/tests/textures/: ASTC_10x10.ktx2  ASTC_10x5.ktx2  ASTC_10x6.ktx2  ASTC_10x8.ktx2  ASTC_12x10.ktx2  ASTC_12x12.ktx2  ASTC_4x4.ktx2  ASTC_5x4.ktx2  ASTC_5x5.ktx2  ASTC_6x5.ktx2  ASTC_6x6.ktx2  ASTC_8x5.ktx2  ASTC_8x6.ktx2  ASTC_8x8.ktx2  ATC_RGB.dds  ATC_RGBA_Explicit.dds  ATC_RGBA_Interpolated.dds  BASISU_ETC1S.ktx2  BASISU_UASTC.ktx2  BC1.ktx2  BC3.ktx2  BC4.ktx2  BC5.ktx2  BC6H.ktx2  BC7.ktx2  CRUNCH_DXN.crn  CRUNCH_DXT1.crn  CRUNCH_DXT5.crn  CRUNCH_DXT5A.crn  DXT2.ktx2  EAC_R11.ktx2  EAC_RG11.ktx2  ETC1_RGB.ktx2  ETC2_RGB.ktx2  ETC2_RGBA.ktx2  ETC2_RGB_A1.ktx2  PVRTCII_2bpp.ktx2  PVRTCII_4bpp.ktx2  PVRTCI_2bpp_RGB.ktx2  PVRTCI_2bpp_RGBA.ktx2  (+12 more)
src/: astc.rs  atc.rs  bcn.rs  bitreader.rs  color.rs  crnlib.rs  crunch.rs  etc.rs  f16.rs  lib.rs  macros.rs  pvrtc.rs  unitycrunch.rs
src/bcn/: bc1.rs  bc2.rs  bc3.rs  bc4.rs  bc5.rs  bc6.rs  bc7.rs  consts.rs
src/crunch/: crn_consts.rs  crn_decomp.rs  crn_static_huffman_data_model.rs  crn_symbol_codec.rs  crn_unpacker.rs  crn_utils.rs  crnlib.rs
src/etc/: consts.rs  eac.rs  etc1.rs  etc2.rs
src/unitycrunch/: crn_decomp.rs  crn_static_huffman_data_model.rs  crn_symbol_codec.rs  crn_unpacker.rs  crn_utils.rs  crnlib.rs
tests/: test.rs
