[package]
name = "texture2ddecoder"
version = "0.1.0"
edition = "2021"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "COPYRIGHT"
]
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "pure Rust no-std texture decoder"
documentation = "https://docs.rs/texture2ddecoder"
homepage = "https://crates.io/crates/texture2ddecoder"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UniversalGameExtraction/texture2ddecoder"
categories = [
    "graphics",
    "no-std",
    "no-std::no-alloc",
    "multimedia::encoding",
    "multimedia::images"
]


[dependencies]
paste = "^1.0.12"

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
ddsfile = "^0.5.1"
image = "^0.24"
ktx2 = "^0.3.0"
lazy_static = "^1.4.0"
half = {version="2.3.1", features = []}
