[package]
name = "texture2ddecoder_rs"
version = "0.1.0"
edition = "2021"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "COPYRIGHT",
    "../../src/*",
    "../../Cargo.toml",
    "../../README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "texture2ddecoder python bindings"
documentation = "https://docs.rs/texture2ddecoder"
homepage = "https://crates.io/crates/texture2ddecoder"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UniversalGameExtraction/texture2ddecoder"
categories = [
    "graphics",
    "no-std",
    "no-std::no-alloc",
    "multimedia::encoding",
    "multimedia::images",
]

[lib]
name = "texture2ddecoder_rs"
crate-type = ["cdylib"]

[dependencies]
texture2ddecoder = { path = "../.." }
pyo3 = { version = "^0.20.2", features = ["extension-module"] }
paste = "^1.0.12"
