[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "../../Cargo.toml",
    "../../src",
    "../../Cargo.lock",
    "../../README.md",
    "../../LICENSE-MIT",
    "../../LICENSE-APACHE",
]
python-source = "python"
module-name = "texture2ddecoder_rs"
bindings = 'pyo3'
